fix resposiveness black area on mobile

--- a/style.css
+++ b/style.css
@@ -163,11 +163,15 @@ li:hover {
   transform: rotate(-45deg) scaleX(1.3) translate(-5px, 4px);
 }
 
-
-
 @media all and (max-width: 700px) {
   .swiper-slide {
     width: 85vw;
-    height: 60vh;
+    min-height: 55vw;
+  }
+}
+
+@media all and (max-width: 400px) {
+  h1 {
+    font-size: 2rem;
   }
 }
